@@ -1463,27 +1463,6 @@ class Preferences {
 			return array( $result, 'mailerror' );
 		}
 	}
-
-	/**
-	 * @deprecated since 1.19
-	 * @param User $user
-	 * @return array
-	 */
-	public static function loadOldSearchNs( $user ) {
-		wfDeprecated( __METHOD__, '1.19' );
-
-		$searchableNamespaces = SearchEngine::searchableNamespaces();
-		// Back compat with old format
-		$arr = array();
-
-		foreach ( $searchableNamespaces as $ns => $name ) {
-			if ( $user->getOption( 'searchNs' . $ns ) ) {
-				$arr[] = $ns;
-			}
-		}
-
-		return $arr;
-	}
 }
 
 /** Some tweaks to allow js prefs to work */
